[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "radonpy"
version = "0.2.4"
dependencies = [
  "aioinflux",
  "bleak>=0.12.0",
]
authors = [
  {name = "Ben Wolsieffer", email = "benwolsieffer@gmail.com"},
]
description = "Tools to communicate with the RadonEye RD200 radon detector"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE.txt" ]
keywords = [ "radon", "radoneye" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Home Automation",
]

[project.urls]
Repository = "https://github.com/lopsided98/radonpy.git"
Issues = "https://github.com/lopsided98/radonpy/issues"

[project.scripts]
radonpy = "radonpy.main:main"

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "aioinflux"
ignore_missing_imports = true

[tool.black]
line-length = 100
