[metadata]
name = radonpy
version = 0.1.0
author = Ben Wolsieffer
author_email = benwolsieffer@gmail.com
description = Tools to communicate with the RadonEye RD200 radon detector
long_description = file: README.md
license = Apache License 2.0
keywords = radon, radoneye
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Home Automation
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
install_requires =
    aioinflux
    bleak

[options.entry_points]
console_scripts =
    radonpy = radonpy.main:main
