[metadata]
name = radonpy
version = 0.2.1
author = Ben Wolsieffer
author_email = benwolsieffer@gmail.com
description = Tools to communicate with the RadonEye RD200 radon detector
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
keywords = radon, radoneye
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Home Automation
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
install_requires =
    aioinflux
    bleak >= 0.12.0

[options.entry_points]
console_scripts =
    radonpy = radonpy.main:main

[flake8]
ignore = E203
max-line-length = 100

[mypy]
strict = True
show_error_codes = True
# Fix: error: Module has no attribute "BleakClient"
# This is a bug in bleak's type annotations and there doesn't seem to be a more
# specific way to ignore this error
disable_error_code = attr-defined

[mypy-aioinflux.*]
ignore_missing_imports = True
